# scope-fast-bloom

./: README.md  pyproject.toml
src/scope_bloom/: __init__.py  pipeline.py  schema.py
