[project]
name = "scope-bloom"
version = "0.1.0"
description = "GPU bloom/glow postprocessor for Daydream Scope"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.entry-points."scope"]
scope_bloom = "scope_bloom"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_bloom"]
